# VPS-Calc

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: apk.yml  build.yml  ipa.yml
