[project]
name = "VPS Calc"
version = "1.0.0"
description = "App para calcular el costo de VPS en Cuba"
authors = [
  {name = "KeimaSenpai", email = "KeimaSenpai@proton.me"}
]
dependencies = ["flet==0.26.0"]


[tool.flet]
org = "com.bytebloom" # --org
product = "VPS Calc" # --product
company = "ByteBloom" # --company
copyright = "Copyright (C) 2024 by ByteBloom" # --copyright
build_number = 1 # --build-number